--- a/.env
+++ b/.env
@@ -35,4 +35,4 @@ JWT_SECRET=9Sy1SvibXrFIUDxnUPS2vSGnFIu1uazy
 
 APP_MODULES_NHVV_VNEDUTECH_VN=adtech.core
 APP_MODULES_DHCD_VNEDUTECH_VN=adtech.core
-APP_MODULES_CPVM_LOCAL_VN=cpvm.subject,level,classes
+APP_MODULES_CPVM_LOCAL_VN=cpvm.subject,level,classes,block
